--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -13,8 +13,7 @@ dependencies:
     sdk: flutter
   get_it: ^7.2.0
   flutter_bloc: ^8.1.1
-  http: ^0.13.5
-
+  google_fonts: ^4.0.3
 
   core:
     path: ../core
